Changed Default Styling
-Make changes to default theme to be more app specific
-The login needs to be centered to full screen (100vh)

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--iOS compatibility-->
     <meta name="theme-color" content="#000000" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" >
+<meta name="viewport" content="viewport-fit=cover, user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta
       name="Grocery List Application"
       content="Groceries is a free item and item list storing app that allows users to never forget to buy the things they need with access to their lists and items from anywhere."
