--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--iOS compatibility-->
     <meta name="theme-color" content="#000000" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" >
-<meta name="viewport" content="viewport-fit=cover, user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" />
+    <meta
+      name="viewport"
+      content="viewport-fit=cover, user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1"
+    />
     <meta
       name="Grocery List Application"
       content="Groceries is a free item and item list storing app that allows users to never forget to buy the things they need with access to their lists and items from anywhere."
@@ -33,6 +36,5 @@
   <body>
     <noscript>Please enable JavaScript to run this applicaiton.</noscript>
     <div id="root"></div>
-
   </body>
 </html>
