--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
       content="viewport-fit=cover, user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1"
     />
     <meta
-      name="Grocery List Application"
+      name="Grocery Lists"
       content="Groceries is a free item and item list storing app that allows users to never forget to buy the things they need with access to their lists and items from anywhere."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>grocerylists</title>
+    <title>Grocery Lists</title>
   </head>
   <body>
     <noscript>Please enable JavaScript to run this applicaiton.</noscript>
