--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,24 +13,13 @@
       content="viewport-fit=cover, user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1"
     />
     <meta
-      name="Grocery Lists"
-      content="Groceries is a free item and item list storing app that allows users to never forget to buy the things they need with access to their lists and items from anywhere."
+      name="description"
+      content="Grocery-lists is a list and item storing app that allows users to never forget to buy the things they need. With the ability to access their lists and items from anywhere!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <title>Grocery Lists</title>
   </head>
   <body>
